--- a/scss/student.scss
+++ b/scss/student.scss
@@ -439,21 +439,32 @@
         top: 0;
         left: -50%;
         transform: translate(calc(-50% + 1px));
-        background: var(--clr-primary-900);
     }
 
     div {
         &.mY20 {
             font-weight: var(--fw-semi-medium);
         }
-
-        max-width: 960px;
     }
+}
+
+.left-outside.mw960 div {
+    max-width: 960px;
 }
 
 .left-outside.blue {
     background-color: var(--clr-primary-900);
     color: var(--clr-neutral-1000);
+    &::before {
+        background: var(--clr-primary-900);
+    }
+}
+
+.left-outside.gray {
+    background-color: var(--clr-neutral-900);
+    &::before {
+        background: var(--clr-neutral-900);
+    }
 }
 
 ol.special {
@@ -466,6 +477,51 @@ ol.special {
     img {
         flex: 1;
         width: clamp(280px, calc(50% - var(--inline-padding)), calc(50% - var(--inline-padding)));
+    }
+    &.small {
+        img {
+            flex: 1;
+            width: clamp(280px, calc(34% - var(--inline-padding)), calc(34% - var(--inline-padding)));
+        }
+    }
+    &.no-flex {
+        img:last-child {
+            flex: none;
+        }
+    }
+}
+
+.methods {
+    .info {
+        align-items: stretch;
+    }
+    .info-wrapper {
+        width: 270px;
+        padding: 0 2rem;
+        border-right: 1px solid var(--clr-neutral-700);
+        &:first-child {
+            padding-left: 0;
+        }
+        &:last-child {
+            padding-right: 0;
+            border-right: none;
+        }
+    }
+}
+
+.instruction {
+    margin: 8.125rem 0;
+    video {
+        width: clamp(280px, 50%, 580px);
+        flex: 1;
+        border-radius: 10px;
+    }
+    .flex.wrap {
+        justify-content: flex-start;
+        gap: 20px;
+    }
+    .fw-semi-medium {
+        flex: 1;
     }
 }
 
@@ -511,5 +567,18 @@ ol.special {
 
     .feedback-card .fs-25 {
         margin: 1.25rem 0;
+    }
+}
+
+@media screen and (max-width: 625px) {
+    .methods {
+        .info {
+            flex-direction: column;
+        }
+        .info-wrapper {
+            padding: 1rem 0;
+            border-right: none;
+            border-bottom: 1px solid var(--clr-dark-400);
+        }
     }
 }
