--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -17,7 +17,7 @@
   --clr-dark-700: #262729;
   --clr-dark-500: #6F6F6F;
   --clr-dark-400: #707070;
-  --clr-shadow: #26272920;
+  --clr-shadow: rgba(211, 210, 210, 0.25);
 
   // Primary font styles
   // Made for the possible future changes in design
