--- a/css/variables.css
+++ b/css/variables.css
@@ -10,7 +10,7 @@
   --clr-dark-700: #262729;
   --clr-dark-500: #6F6F6F;
   --clr-dark-400: #707070;
-  --clr-shadow: #26272920;
+  --clr-shadow: rgba(211, 210, 210, 0.25);
   --ff-primary: "Inter", sans-serif;
   --fw-small: 300;
   --fw-regular: 400;
