--- a/css/education.css
+++ b/css/education.css
@@ -1171,145 +1171,310 @@ footer .contact.flex.start img {
     fill: var(--clr-accent-700);
   }
 }
-.news {
-  margin-top: 8.125rem;
-  margin-bottom: 8.125rem;
+.position {
+  justify-content: flex-start;
+  width: 90%;
+  min-width: 320px;
+  padding: 7.75rem 1.25rem 7.75rem 0;
+  border-radius: 0 10px 10px 0;
+  background-color: #F8F8F8;
+  gap: 2rem;
+  position: relative;
+}
+.position::before {
+  content: "";
+  width: 100vw;
+  height: 100%;
+  left: -100vw;
+  top: 0;
+  position: absolute;
+  background-color: #F8F8F8;
+}
+.position .fs-500 {
+  color: var(--clr-primary-900);
+  flex: 1;
+  max-width: 550px;
 }
 
-.news-block-wrapper {
+.rules-file-cards-wrapper {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: stretch;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 1.25rem;
 }
-.news-block-wrapper .news-block {
-  width: clamp(300px, 30%, 380px);
-  text-align: start;
-  border-radius: 10px;
-  isolation: isolate;
+
+.file-card-wrapper.main .file-card {
+  width: 30%;
+}
+
+.file-card {
+  cursor: pointer;
   position: relative;
+  color: var(--clr-neutral-1000);
+  width: 30%;
+  min-width: 280px;
+  background-color: var(--clr-primary-900);
+  padding: 1.875rem 1.5625rem 1.2rem 1.5625rem;
+  border-radius: 10px;
+  margin-bottom: auto;
+}
+.file-card.white {
+  transition: 0.2s ease;
   background-color: var(--clr-neutral-1000);
-  box-shadow: 0 0 10px var(--clr-shadow);
+  box-shadow: 0 2px 10px var(--clr-shadow);
+  color: var(--clr-dark-700);
 }
-.news-block-wrapper .news-block img {
+.file-card.white img {
+  transition: 0.2s ease;
+  filter: brightness(50%);
+}
+.file-card.white .file-card-title::after {
+  transition: 0.2s ease;
+  background-color: var(--clr-dark-700);
+}
+.file-card.white .link {
+  transition: 0.2s ease;
+  color: var(--clr-primary-900);
+}
+.file-card.white .link path {
+  transition: 0.2s ease;
+  fill: var(--clr-primary-900);
+}
+.file-card.white:hover {
+  color: var(--clr-neutral-1000);
+  box-shadow: none;
+  background-color: var(--clr-primary-900);
+}
+.file-card.white:hover img {
+  filter: brightness(100%);
+}
+.file-card.white:hover .file-card-title::after {
+  background-color: var(--clr-neutral-1000);
+}
+.file-card.white:hover .link {
+  color: var(--clr-accent-700);
+}
+.file-card.white:hover .link svg {
+  transform: rotate(45deg);
+}
+.file-card.white:hover .link path {
+  fill: var(--clr-accent-700);
+}
+.file-card img {
+  width: 23px;
+}
+.file-card.thin .file-card-title {
+  font-weight: var(--fw-normal);
+}
+.file-card-title {
+  font-size: var(--fw-100);
+  display: inline-block;
+  font-weight: var(--fw-semi-meidum);
+  padding-bottom: 30px;
+}
+.file-card-title::after {
+  content: "";
+  width: 80%;
+  height: 1px;
+  background-color: var(--clr-neutral-1000);
+  position: absolute;
+  bottom: 60px;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.switcher {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 10px;
+  margin-top: 8.125rem;
+  border-top: 1px solid var(--clr-neutral-700);
+  border-bottom: 1px solid var(--clr-neutral-700);
 }
-.news-block-wrapper .news-block .info-block {
-  position: relative;
-  border-radius: 10px;
-  padding: 10px;
-  z-index: -1;
+
+.switcher .line {
+  width: 1px;
+  height: 100%;
+  min-height: 90px;
+  background-color: var(--clr-neutral-700);
 }
-.news-block-wrapper .news-block .date {
-  margin: 10px 0;
-  color: var(--clr-dark-500);
-  display: block;
-  font-weight: var(--fw-regular);
+
+.switcher .tab {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  padding: 2rem 0;
+  gap: 10px;
+  margin: 0 clamp(1rem, 5vw, 10%);
+  cursor: pointer;
+  transition: 0.2s ease;
 }
-.news-block-wrapper .news-block .descr {
-  display: block;
-  font-weight: var(--fw-semi-medium);
+
+.switcher .tab svg,
+.switcher .tab path {
+  transition: 0.2s ease;
 }
-.news-block-wrapper .news-block .link {
-  margin-top: 10px;
-  justify-content: flex-start;
+
+.switcher .tab.active {
+  color: var(--clr-primary-700);
+}
+
+.switcher .tab.active svg {
+  transform: rotate(180deg);
+}
+
+.switcher .tab.active path {
+  fill: var(--clr-primary-700);
+}
+
+.switcher .tab:hover {
+  color: var(--clr-primary-900);
+}
+
+.switcher .tab:hover path {
+  fill: var(--clr-primary-900);
+}
+
+.tab-page {
+  transition: 0.2s ease;
+  opacity: 0;
+  visibility: hidden;
+  height: 0;
+  overflow-y: hidden;
+}
+
+.tab-page.active {
+  height: 100%;
+  opacity: 1;
+  visibility: visible;
+}
+
+.table-wrapper {
+  width: 100%;
+  overflow-x: auto;
+}
+
+table.customTable {
+  background-color: #FFFFFF;
+  border-collapse: collapse;
+  border-width: 0px;
+  border-color: #7EA8F8;
+  border-style: solid;
+  color: #000000;
+}
+
+table.customTable td,
+table.customTable th {
+  border-width: 0px;
+  border-color: #7EA8F8;
+  border-style: solid;
+  font-size: 15px;
+  font-weight: var(--fw-small);
+  padding: 1rem 0 2rem 0;
+  vertical-align: text-top;
+  box-sizing: content-box;
+}
+
+table.customTable thead {
+  background-color: #FFFFFF;
+}
+
+table.customTable th {
+  text-align: left;
+  color: var(--clr-primary-900);
+  font-weight: var(--fw-medium);
+}
+
+table.customTable thead tr {
+  border-bottom: none;
+}
+
+table.customTable tr {
+  border-bottom: 1px solid var(--clr-neutral-700);
+}
+table.customTable tr:last-child {
+  border-bottom: none;
+}
+
+table.customTable td:nth-child(1),
+table.customTable th:nth-child(1) {
+  padding-right: 1rem;
+  width: clamp(310px, 21.875rem, 350px);
+}
+
+table.customTable td:nth-child(2),
+table.customTable th:nth-child(2) {
+  padding-right: 3rem;
+  width: clamp(310px, 21.675rem, 346px);
+}
+
+table.customTable td:nth-child(3),
+table.customTable th:nth-child(3) {
+  width: 7.5rem;
+  min-width: 125px;
+}
+
+.lists {
+  margin: 2rem 0 3.75rem;
+  list-style-position: inside;
+  gap: 5.625rem;
+}
+.lists li {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
 
-.pagination-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  margin-top: 3.75rem;
-  gap: 10px;
-}
-.pagination-wrapper .pagination {
-  gap: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
-}
-.pagination-wrapper button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  width: 2.25rem;
-  height: 2.25rem;
-  border: 1px solid transparent;
-  border-radius: 5px;
-  background-color: transparent;
-  font-weight: var(--fw-medium);
-  transition: 0.2s ease;
-}
-.pagination-wrapper button:not(:disabled) {
-  cursor: pointer;
-}
-.pagination-wrapper button:hover:not(:disabled) {
-  background-color: var(--clr-accent-700);
-  filter: saturate(180%);
-}
-.pagination-wrapper button:disabled {
-  opacity: 1;
-  color: var(--clr-dark-900);
-}
-.pagination-wrapper button:active {
-  transform: scale(0.8);
-}
-.pagination-wrapper button.active {
-  background-color: var(--clr-accent-700);
-}
-.pagination-wrapper button.hidden {
-  display: none;
-}
-
-.page {
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 1.25rem;
-  transition: opacity 0.2s ease;
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-}
-
-.page.active {
+.checkmark {
+  width: 360px;
   position: relative;
-  visibility: visible;
-  opacity: 1;
+  max-width: 23.75rem;
+  padding-left: 2.5rem;
+  margin: 1.25rem 2rem 1.25rem 0;
+}
+.checkmark::before {
+  content: url("/assests/icons/checkmark.svg");
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
-img {
-  max-width: 100%;
+.ticks .flex {
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
-.date {
-  color: var(--clr-primary-900);
-  font-weight: var(--fw-semi-medium);
+@media screen and (max-width: 1166px) {
+  .lists {
+    gap: 2rem;
+  }
 }
-
-.tags {
-  font-size: clamp(12px, 0.875rem, 14px);
-  color: #6F6F6F;
+@media screen and (max-width: 1098px) {
+  .lists.flex {
+    flex-direction: column;
+    gap: 0;
+  }
 }
-
-video {
-  width: 100%;
-  max-width: 580px;
-  border-radius: 10px;
+@media screen and (max-width: 690px) {
+  main.responsive {
+    margin-top: 0;
+  }
+}
+@media screen and (max-width: 406px) {
+  .switcher {
+    flex-direction: column;
+  }
+  .switcher .line {
+    width: 100%;
+    height: 1px;
+    min-height: 0px;
+  }
 }
