--- a/css/management.css
+++ b/css/management.css
@@ -11,7 +11,7 @@
   --clr-dark-700: #262729;
   --clr-dark-500: #6F6F6F;
   --clr-dark-400: #707070;
-  --clr-shadow: #26272920;
+  --clr-shadow: rgba(211, 210, 210, 0.25);
   --ff-primary: "Inter", sans-serif;
   --fw-small: 300;
   --fw-regular: 400;
@@ -97,6 +97,10 @@
   margin: 1.25rem 0;
 }
 
+.mY40 {
+  margin: 2.5rem 0;
+}
+
 .mY60 {
   margin: 3.75rem 0;
 }
@@ -125,6 +129,10 @@
   color: var(--clr-primary-900);
 }
 
+.clr-primary700 {
+  color: var(--clr-primary-700);
+}
+
 .clr-neutral {
   color: var(--clr-neutral-1000);
 }
@@ -139,6 +147,10 @@
 
 .fs-25 {
   font-size: var(--fs-25);
+}
+
+.fs-50 {
+  font-size: var(--fs-50);
 }
 
 .fs-200 {
@@ -260,6 +272,10 @@ svg {
     scroll-behavior: auto !important;
   }
 }
+.empty {
+  visibility: hidden;
+}
+
 img.general {
   width: 100%;
 }
@@ -349,12 +365,12 @@ img.general {
 }
 .block-title:not(.without)::after {
   content: "";
-  width: 100vw;
+  width: clamp(100px, 110%, 510px);
   height: 1px;
   background-color: var(--clr-primary-900);
   position: absolute;
   bottom: 0;
-  right: -10%;
+  left: calc(-1 * var(--inline-padding));
 }
 .block-title.white {
   color: var(--clr-neutral-1000);
@@ -751,6 +767,16 @@ header-component.open .header-top .small-nav .hamburger-wrapper .hamburger::befo
 .button:hover svg {
   transform: rotate(45deg);
 }
+.button.blue {
+  color: var(--clr-neutral-1000);
+  background-color: var(--clr-primary-900);
+}
+.button.blue path {
+  fill: var(--clr-neutral-1000);
+}
+.button.blue:hover {
+  box-shadow: 0 10px 20px var(--clr-shadow);
+}
 
 .link {
   display: flex;
@@ -967,12 +993,18 @@ footer .contact.flex.start img {
   border-radius: 5px;
   transition: 0.2s ease;
 }
+.goUp svg {
+  transition: 0.2s ease;
+}
 .goUp:hover {
   border-color: var(--clr-neutral-1000);
   border-radius: 50%;
 }
 .goUp:active {
   background-color: var(--clr-dark-500);
+}
+.goUp:active svg {
+  transform: scale(0.6);
 }
 
 @media screen and (max-width: 877px) {
@@ -1004,8 +1036,8 @@ footer .contact.flex.start img {
     transition: 0.2s ease;
     transition-delay: 0.5s ease;
     background-color: rgba(56, 91, 173, 0.6392156863);
-    -webkit-backdrop-filter: blur(20px);
-            backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(5px) saturate(50%);
+            backdrop-filter: blur(5px) saturate(50%);
   }
   header-component.open {
     background: var(--clr-neutral-1000);
@@ -1023,6 +1055,9 @@ footer .contact.flex.start img {
   footer .logo,
 .logo-image-link {
     display: none;
+  }
+  .footer-contacts.flex.spb.ais {
+    justify-content: flex-start;
   }
   .header-top .actual-header-top,
 .header-bottom {
