--- a/css/student.css
+++ b/css/student.css
@@ -11,7 +11,7 @@
   --clr-dark-700: #262729;
   --clr-dark-500: #6F6F6F;
   --clr-dark-400: #707070;
-  --clr-shadow: #26272920;
+  --clr-shadow: rgba(211, 210, 210, 0.25);
   --ff-primary: "Inter", sans-serif;
   --fw-small: 300;
   --fw-regular: 400;
@@ -365,12 +365,12 @@ img.general {
 }
 .block-title:not(.without)::after {
   content: "";
-  width: 100vw;
+  width: clamp(100px, 110%, 510px);
   height: 1px;
   background-color: var(--clr-primary-900);
   position: absolute;
   bottom: 0;
-  right: -10%;
+  left: calc(-1 * var(--inline-padding));
 }
 .block-title.white {
   color: var(--clr-neutral-1000);
@@ -993,12 +993,18 @@ footer .contact.flex.start img {
   border-radius: 5px;
   transition: 0.2s ease;
 }
+.goUp svg {
+  transition: 0.2s ease;
+}
 .goUp:hover {
   border-color: var(--clr-neutral-1000);
   border-radius: 50%;
 }
 .goUp:active {
   background-color: var(--clr-dark-500);
+}
+.goUp:active svg {
+  transform: scale(0.6);
 }
 
 @media screen and (max-width: 877px) {
