--- a/scss/style.scss
+++ b/scss/style.scss
@@ -188,12 +188,12 @@ img.general {
 
   &:not(.without)::after {
     content: "";
-    width: 100vw;
+    width: clamp(100px, 110%, 510px);
     height: 1px;
     background-color: var(--clr-primary-900);
     position: absolute;
     bottom: 0;
-    right: -10%;
+    left: calc(-1 * var(--inline-padding));
   }
 
   &.white {
@@ -629,10 +629,13 @@ header-component.open {
 
   &.blue {
     color: var(--clr-neutral-1000);
+
     path {
       fill: var(--clr-neutral-1000);
     }
+
     background-color: var(--clr-primary-900);
+
     &:hover {
       box-shadow: 0 10px 20px var(--clr-shadow);
     }
@@ -881,12 +884,20 @@ footer {
   border-radius: 5px;
   transition: 0.2s ease;
 
+  svg {
+    transition: 0.2s ease;
+  }
+
   &:hover {
     border-color: var(--clr-neutral-1000);
     border-radius: 50%;
   }
 
   &:active {
+    svg {
+      transform: scale(0.6);
+    }
+
     background-color: var(--clr-dark-500);
   }
 }
