--- a/css/directors-blog.css
+++ b/css/directors-blog.css
@@ -1171,285 +1171,114 @@ footer .contact.flex.start img {
     fill: var(--clr-accent-700);
   }
 }
-.hero {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  width: 100%;
-  min-height: 100vh;
-  color: var(--clr-neutral-1000);
-  text-align: center;
-  font-weight: var(--fw-bold);
-  position: relative;
-  overflow: hidden;
-}
-.hero .fs-700 {
-  padding: 0 10px;
-}
-.hero video {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%);
-  z-index: -1;
+img {
+  max-width: 100%;
 }
 
-.quickActions {
+.quote {
+  padding-top: 6.25rem;
+  margin-bottom: 3.75rem;
   position: relative;
-  top: -60px;
-  padding-inline: var(--inline-padding);
+  --bg-size: 80%;
+  background: rgb(248, 248, 248);
+  background: linear-gradient(180deg, rgb(248, 248, 248) 0%, rgb(248, 248, 248) var(--bg-size), rgb(255, 255, 255) var(--bg-size));
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f8f8f8",endColorstr="#ffffff",GradientType=1);
 }
-.quickActions .action {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  width: clamp(150px, 30vw, 380px);
-  aspect-ratio: 8/5;
-  color: var(--clr-neutral-1000);
-  background-color: var(--clr-primary-900);
-  text-align: center;
-  font-size: var(--fs-300);
-  font-weight: var(--fw-bold);
-  border-radius: 10px;
-  transition: 0.2s ease;
-}
-.quickActions .action:hover {
-  color: var(--clr-accent-700);
-}
-
-@media screen and (max-width: 690px) {
-  .quickActions .action {
-    font-size: var(--fs-50);
-  }
-}
-.news {
-  padding-inline: var(--inline-padding);
-}
-
-.news-block-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: 2.5rem 0;
-  margin-bottom: 8.125rem;
-  gap: 1.25rem;
-}
-.news-block-wrapper .news-block {
-  width: clamp(300px, 30%, 380px);
-  text-align: start;
-  border-radius: 10px;
-  isolation: isolate;
-  position: relative;
-  background-color: var(--clr-neutral-1000);
-  box-shadow: 0 0 10px var(--clr-shadow);
-}
-.news-block-wrapper .news-block img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 10px;
-}
-.news-block-wrapper .news-block .info-block {
-  position: relative;
-  border-radius: 10px;
-  padding: 10px;
-  z-index: -1;
-}
-.news-block-wrapper .news-block .date {
-  margin: 10px 0;
-  color: var(--clr-dark-500);
-  display: block;
-  font-weight: var(--fw-regular);
-}
-.news-block-wrapper .news-block .descr {
-  display: block;
-  font-weight: var(--fw-semi-medium);
-}
-.news-block-wrapper .news-block .link {
-  margin-top: 10px;
-  justify-content: flex-start;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.director-block-wrapper {
-  position: relative;
-  margin-bottom: 8.125rem;
-}
-.director-block-wrapper::before {
-  content: "";
-  z-index: -1;
-  width: 100vw;
-  height: calc(100% - 2.5rem);
-  position: absolute;
-  background: #F8F8F8;
-}
-
-.director-block {
-  position: relative;
-}
-.director-block img {
-  flex: 1;
-  width: clamp(240px, 40%, 480px);
-  aspect-ratio: 120/127;
+.quote img {
+  width: 50%;
+  max-height: 414px;
+  aspect-ratio: 134/103.5;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 0 0 10px 10px;
 }
-.director-block-info {
-  flex: 1;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  padding: 3.125rem 20px 20px 3.125rem;
-  min-width: 280px;
+.quote .flex {
+  width: 100%;
 }
-.director-block-info .title {
-  position: relative;
-  font-size: var(--fs-500);
-  color: var(--clr-primary-900);
-  font-weight: var(--fw-medium);
-  margin-bottom: 3.4rem;
-}
-.director-block-info .title::after {
+.quote::before {
   content: "";
+  width: 100%;
+  height: var(--bg-size);
   position: absolute;
-  bottom: -0.9375rem;
-  right: -50%;
-  width: 200%;
-  height: 1px;
-  background-color: var(--clr-primary-900);
-  z-index: -1;
+  top: 0;
+  left: 0;
+  transform: translate(-100%);
+  background-color: #F8F8F8;
 }
-.director-block-info .descr {
-  font-weight: var(--fw-semi-medium);
-  margin-bottom: 1.25rem;
-}
-.director-block-info .text {
-  font-size: var(--fs-50);
-  font-weight: var(--fw-small);
-  margin-bottom: 1.875rem;
-}
-.director-block-info .link {
-  color: var(--clr-primary-900);
-}
-
-.instagram-block {
-  margin-bottom: 8.125rem;
-}
-.instagram-block .insta-blocks {
-  margin-top: 4rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-.instagram-block .insta-blocks .block {
-  width: clamp(300px, 100%, 380px);
-  border: 3px solid transparent;
-  transition: 0.2s ease;
-  border-radius: 15px;
-  overflow: hidden;
-}
-.instagram-block .insta-blocks .block img {
+.quote-text {
   width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.instagram-block .insta-blocks .block:hover {
-  border-color: var(--clr-primary-900);
-}
-
-.partners-block-wrapper {
-  margin-top: 3.5rem;
-  gap: 1.25rem;
-}
-
-.partners-block {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  width: clamp(280px, 100%, 380px);
-  min-width: 300px;
-  min-height: 150px;
-  background: var(--clr-neutral-1000);
-  box-shadow: 0 0 10px var(--clr-shadow);
-  border-radius: 10px;
-  border: 1px solid transparent;
-  transition: 0.2s ease;
-}
-.partners-block:hover {
-  box-shadow: 0 0 0 transparent;
-  border-color: var(--clr-dark-500);
-}
-
-.textInTheEnd {
-  width: 100%;
-  text-align: end;
+  text-align: center;
   position: relative;
-  top: -50px;
+  padding-right: 2rem;
 }
-.textInTheEnd span {
-  width: clamp(300px, 30%, 600px);
-  margin-right: auto;
+.quote-text-descr {
+  text-align: left;
+  color: var(--clr-dark-700);
+  position: relative;
+  left: -5rem;
+  top: 5rem;
+}
+.quote-text span {
+  display: inline-block;
+  max-width: 32.75rem;
+  text-align: start;
+  padding-left: 6rem;
+}
+.quote-big {
+  line-height: 4.375rem;
+  color: #385CAD;
+  font-size: clamp(90px, 16rem, 128px);
+  opacity: 0.1;
+  font-weight: 700;
+  position: relative;
+}
+.quote-big.left {
+  left: -6rem;
+}
+.quote-big.right {
+  right: -12rem;
 }
 
-@media screen and (max-width: 1303px) {
-  .instagram-block .insta-blocks {
-    justify-content: center;
+@media screen and (max-width: 1117px) {
+  .quote-text-descr {
+    top: 2rem;
   }
 }
-@media screen and (max-width: 1220px) {
-  .director-block-wrapper::before {
-    height: 100%;
+@media screen and (max-width: 817px) {
+  .quote {
+    --bg-size: 100%;
+  }
+  .quote-text-descr {
+    top: 0;
+  }
+  .quote-big {
+    font-size: clamp(70px, 5.625rem, 90px);
+  }
+  .quote-big.left {
+    left: -3rem;
+  }
+  .quote-big.right {
+    right: -12rem;
   }
 }
-@media screen and (max-width: 1084px) {
-  .dn1084 {
-    display: none;
+@media screen and (max-width: 690px) {
+  .quote {
+    --bg-size: 60%;
   }
-}
-@media screen and (max-width: 1045px) {
-  .news-block-wrapper {
-    justify-content: center;
+  .quote img {
+    width: 100%;
   }
-}
-@media screen and (max-width: 1084px) {
-  .textInTheEnd {
-    margin: 3rem 0;
-    position: static;
-    text-align: center;
+  .quote .flex {
+    justify-content: flex-start;
+    flex-direction: column;
   }
-}
-@media screen and (max-width: 904px) {
-  .dn904 {
-    display: none;
+  .quote-text {
+    text-align: start;
   }
-}
-@media screen and (max-width: 863px) {
-  .partners-blocks .partners-block-wrapper {
-    justify-content: center;
+  .quote-text-descr {
+    left: 0;
   }
-}
-@media screen and (max-width: 577px) {
-  .dn577 {
-    display: none;
-  }
-  .director-block .director-block-info {
-    padding: 2rem 0;
+  .quote-text span {
+    padding-left: 3rem;
   }
 }
